# claude-core

./: .gitignore  README.md  pyproject.toml
docs/code-reading/: 00-code-flow.md  01-sdk-entry.md  02-query-engine.md  03-query-loop.md  04-tool-system.md  05-builtin-tools.md  06-context.md  07-agents.md  08-prompt.md  09-api-client.md  10-mcp.md  11-langfuse.md  index.md
docs/superpowers/: 2026-04-17-claude-core-vs-claude-code-diff.md  implementation-gap-analysis.md
docs/superpowers/plans/: 2026-04-16-claude-core-implementation.md  2026-04-17-claude-core-remediation-plan.md  2026-04-17-code-reading-library-plan.md
docs/superpowers/specs/: 2026-04-16-claude-core-porting-design.md  2026-04-17-code-reading-library-design.md
examples/: README.md  simple_chat.py  with_tools.py
src/claude_core/: __init__.py  __main__.py
src/claude_core/api/: client.py  (+5 more)
tests/agents/: test_mailbox.py  test_runtime.py  test_worker.py
tests/api/: test_client.py  test_providers.py
tests/context/: test_compression.py  test_manager.py
tests/engine/: test_query_engine.py  test_query_loop.py  test_types.py
tests/langfuse/: test_tracer.py
tests/models/: test_message.py  test_tool.py
tests/prompt/: test_builder.py
tests/smoke/: test_agent_smoke.py  test_prompt_manager_smoke.py  test_query_loop_smoke.py  test_tool_executor_smoke.py
tests/tasks/: test_task_types.py
tests/tools/: test_base.py  test_builtin_permissions.py  test_mcp.py  test_permissions.py  test_registry.py  test_streaming_executor.py  test_validation.py
tests/utils/: test_abort.py  test_stream.py  test_uuid.py
(+63 files in other folders)
