[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-core"
version = "0.1.0"
description = "Claude Code core functionality in Python"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
